# omniclaw

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json
apps/api/: Dockerfile  package.json
apps/api/src/: app.ts  config.ts  delivery-manifest.test.ts  delivery-manifest.ts  dto.ts  errors.ts  index.ts  postgres-store.ts  store.ts  task-contracts.ts  types.ts  validation.ts
apps/api/tests/: phase1.test.ts  phase4-sdk.test.ts  runtime-factory.test.ts
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
contracts/solana/: Anchor.toml  package.json
contracts/solana/scripts/: anchor-test-local-wallet.sh
docs/: api-usage.md  design.md  environment.md  productization-plan.md  sdk-usage.md  spec.md  tech-stack.md  thought.md
docs/adr/: 0001-keep-task-evidence-offchain-and-settlement-state-on-solana.md  0002-stage-solana-payments-before-anchor-escrow.md  0003-make-delivery-manifest-a-first-class-delivery-object.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
programs/escrow/: Anchor.toml  Cargo.toml
programs/escrow/src/: errors.rs  (+2 more)
services/agent-runtime/: Dockerfile  README.md  pyproject.toml
services/agent-runtime/src/omniclaw_agent_runtime/: __init__.py  config.py  contracts.py  graphs.py  grpc_service.py  orchestrator.py  providers.py  sandbox.py  service.py  states.py
services/agent-runtime/tests/: test_runtime_contracts.py  test_runtime_graph.py  test_runtime_grpc_service.py  test_runtime_orchestrator.py
(+46 files in other folders)
